syntax = "proto3";

option csharp_namespace = "Catalog.GRPC.Protos";

service ProductImageProtoService {

	rpc AddImage (AddImageRequest) returns (AddImageResponse);	  
	rpc DeleteImage (DeleteImageRequest) returns (DeleteImageResponse);	  
}

//AddImage messages
message AddImageRequest {
	string productId = 1;
	string FilePath= 2;
}

message AddImageResponse {
	bool IsAdded = 1;
}

//DeleteImage messages
message DeleteImageRequest{
	string productId = 1;
	string FilePath= 2;
}

message DeleteImageResponse{
	bool IsDeleted = 1;
}
